Firts Commit 06_OData

--- a/Employees/webapp/index.html
+++ b/Employees/webapp/index.html
@@ -15,6 +15,10 @@
 		</script>
 	</head>
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="logaligroup.Employees" data-id="container" data-settings='{"id" : "Employees"}'></div>
+		<div data-sap-ui-component 
+             data-name="logaligroup.Employees" 
+             data-id="container" 
+             data-settings='{"id" : "Employees"}'>
+        </div>
 	</body>
 </html>
